--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,12 @@ html, body {
   font-family: monospace;
   color: antiquewhite;
 }
+
+.doto {
+  font-family: "Doto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 900;
+  font-style: normal;
+  font-variation-settings:
+    "ROND" 54;
+}
